static/css/index.css
@import url('https://fonts.googleapis.com/css?family=Patua%20One:700|Patua%20One:400');
@import url('https://fonts.googleapis.com/css?family=Inter:700|Inter:400');
@import url("../css/home.css");
@import url("../css/reaction.css");

:root[data-theme="light"] {
    --text: #050316;
    --background: #fbfbfe;
    --primary: #2f27ce;
    --secondary: #dddbff;
    --accent: #443dff;
}

:root[data-theme="dark"] {
    --text: hsla(0, 0%, 100%, 1);
    --background: linear-gradient(129.76deg, #252937 -0.72%, #101218 80.04%);
    --primary: #3a31d8;
    --secondary: #020024;
    --accent: #0600c2;
}

* {
    scrollbar-width: none;
}

/* Track */
::-webkit-scrollbar-track {
    background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

h1 {
    margin: 0;
    padding: 0;
}

* {
    color: var(--text);
}

body {
    margin: 0;
    font-family: Inter;
    font-size: 0.75rem;
    font-weight: 400;
    line-height: 1.7vmax;
    background: linear-gradient(129.76deg, #252937 -0.72%, #101218 80.04%);
    background-repeat: no-repeat;
    background-size: cover;
    overflow: hidden;
    height: 100%;
}

main {
    overflow: scroll;
    height: 100vh;
}

a {
    text-decoration: none;
}

.glow:hover {
    filter: drop-shadow(0px 0px 10px var(--text)) brightness(130%);
}

svg {
    cursor: pointer;
    fill: var(--text);
}

.frame {
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

.frame>* {
    z-index: -1;
    content: '';
    position: absolute;
    left: 24.5px;
    border-radius: 24px 0 0 0;
    width: calc(100% - 50px);
    height: 50%;
    border: 0.8px solid;
    border-left: none;
    border-right: none;
    border-image-slice: 1;
    border-image-source: linear-gradient(96.07deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 91.96%);
}

.frame .top {
    top: 0;
    border-bottom: none;
}

.frame .bottom {
    bottom: 0;
    border-top: none;
}

.frame::before,
.frame::after {
    z-index: -1;
    content: '';
    position: absolute;
    left: 0;
    width: 24px;
    height: 50%;
    border: 0.8px solid rgba(255, 255, 255, 0.4);
    border-right: none;
}

.frame::before {
    top: 0;
    border-radius: 24px 0 0 0;
    border-bottom: none;
}

.frame::after {
    border-radius: 0 0 0 24px;
    bottom: 0;
    border-top: none;
}


.page404 {
    display: flex;
    margin: auto;
    font-weight: bold;
    display: flex;
    margin: auto;
    width: 100%;
    align-items: center;
    justify-content: center;
    margin-top: 30%;
    font-size: xx-large;
    color: #e75555;
}

